first model of user and fields

--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 ************************************************
 DEVELOPMENT ENVIRONMENT SETUP
 ************************************************
+DB
+______________________________________
+Using SQLite for this project.
 
 Install RVM
 ______________________________________
