Added states and transitions on user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,7 @@ en:
       user:
         aasm_state:  "State"
         aasm_state/new: "New"
-        aasm_state/validated: "Validated"
-        aasm_state/registered: "Registered"
+        aasm_state/registering: "Registering"
+        aasm_state/rating: "Rating"
+        aasm_state/done: "Done"
 
