refactor of authorize to activate.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -41,7 +41,7 @@ en:
     submit:
       create: "Go"
   action_mailer:
-    authorize_user:
+    activate_user:
       subject: "Tourbooker Registration Request"
       line_1: "Thank you for signing up at Tourbooker."
       line_2: |
