--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -56,6 +56,8 @@ en:
     success:
       create_success: "Success! Please check your email to activate your registration."
       found_success_html: "You have already started a registration in the past. Use the link in the email we sent you to activate your registration. Need a new email sent? <a href='%{link}'>Get a new activation email.</a>"
+      registration_success: "Success! Your tour has been scheduled."
+      rating_success: "Thank you for rating your experience."
     new_user:
       get_started: "Get started by entering your email"
     activate_user:
